# w-fsa

./: .gitattributes  CMakeLists.txt  README.md  fst2fsa.py
data/: talk.corpus  talk.wfsa  test.corpus  test.list.wfsa  test.loop.wfsa  test.wfsa  test.wfsa.win  test2.wfsa  test3.wfsa  test4.wfsa  test5.corpus  test5.wfsa  test5_2.wfsa
inc/: ArgParser.h  Corpus.h  FlagDiacritics.h  Fsa.h  HessianLearner.h  Isatty.h  Learner.h  QuasiNewtonLearner.h  Recognize.h  Test.h  Transducer.h  Utils.h  lookup.h
inc/atto/: FlagDiacritics.h  Record.h  Transducer.h  char.h
src/: Corpus.cpp  FlagDiacritics.cpp  Fsa.cpp  HessianLearner.cpp  Isatty.cpp  Learner.cpp  QuasiNewtonLearner.cpp  Test.cpp  Transducer.cpp  Utils.cpp  attol.cpp  char.cpp  lookup.c  main.cpp
